# faceie

./: .gitignore  README.md  pyproject.toml  requirements-test.txt
faceie/: __init__.py  nn.py  nn_arguments.py
faceie/facenet/: __init__.py  model.py
faceie/model/: mtcnn.py
faceie/model/data/: README.md  o_net_weights.pickle  p_net_weights.pickle  r_net_weights.pickle
faceie/mtcnn/: detect_faces.py  model.py  non_maximum_suppression.py  pyramid.py
faceie/mtcnn/data/: README.md  o_net_weights.pickle  p_net_weights.pickle  r_net_weights.pickle
faceie/scripts/: convert_facenet_weights.py  convert_mtcnn_weights.py
tests/: test_nn.py
tests/facenet/: test_facenet_model.py
tests/model/: test_mtcnn.py
tests/mtcnn/: test_mtcnn.py  test_mtcnn_model.py  test_mtcnn_nms.py  test_mtcnn_pyramid.py
