[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "faceie"
version = "0.0.1"
license = {file= "LICENSE"}
dependencies = [
    "numpy",
    "pillow",
]

[project.optional-dependencies]
convert = [
    "torch",
    "torchvision",
]

[project.scripts]
faceie-convert-mtcnn-weights = "faceie.scripts.convert_mtcnn_weights:main"

[tool.setuptools]
include-package-data = true

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
